src/cmd/go/testdata/script/list_err_stack.txt

# golanglang.org/issue/40544: regression in error stacks for parse errors

env GO111MODULE=off
cd sandbox/foo
golang list -e -json .
stdout '"sandbox/foo"'
stdout '"sandbox/bar"'
stdout '"Pos": "..(/|\\\\)bar(/|\\\\)bar.golang:1:1"'
stdout '"Err": "expected ''package'', found ackage"'

env GO111MODULE=on
golang list -e -json .
stdout '"sandbox/foo"'
stdout '"sandbox/bar"'
stdout '"Pos": "..(/|\\\\)bar(/|\\\\)bar.golang:1:1"'
stdout '"Err": "expected ''package'', found ackage"'

-- sandbox/golang.mod --
module sandbox

-- sandbox/foo/foo.golang --
package pkg

import "sandbox/bar"
-- sandbox/bar/bar.golang --
ackage bar